--- a/Controls/SettingsControl.xaml
+++ b/Controls/SettingsControl.xaml
@@ -9,6 +9,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
@@ -82,7 +83,26 @@
             </StackPanel>
         </GroupBox>
 
-        <GroupBox Header="저장" Grid.Row="2" Padding="15" VerticalAlignment="Top">
+        <GroupBox Header="업데이트 설정" Grid.Row="2" Padding="15" Margin="0,0,0,10">
+            <StackPanel>
+                <CheckBox x:Name="CheckUpdateOnStartupCheckBox" 
+                         Content="프로그램 시작 시 자동으로 업데이트 확인" 
+                         IsChecked="True"
+                         VerticalAlignment="Center"
+                         Checked="CheckUpdateOnStartupCheckBox_Changed"
+                         Unchecked="CheckUpdateOnStartupCheckBox_Changed"/>
+                
+                <Button x:Name="CheckUpdateNowButton" 
+                       Content="지금 업데이트 확인" 
+                       Width="150" 
+                       Height="30"
+                       Margin="0,15,0,0"
+                       HorizontalAlignment="Left"
+                       Click="CheckUpdateNowButton_Click"/>
+            </StackPanel>
+        </GroupBox>
+
+        <GroupBox Header="저장" Grid.Row="3" Padding="15" VerticalAlignment="Top">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <Button x:Name="ResetButton" 
                         Content="기본값 복원" 
