--- a/Controls/NotificationWindow.xaml
+++ b/Controls/NotificationWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="FACTOVA_QueryHelper.NotificationWindow"
+﻿<Window x:Class="FACTOVA_QueryHelper.Controls.NotificationWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Notification" 
