--- a/Controls/UpdateNotificationWindow.xaml
+++ b/Controls/UpdateNotificationWindow.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="FACTOVA_QueryHelper.UpdateNotificationWindow"
+<Window x:Class="FACTOVA_QueryHelper.Controls.UpdateNotificationWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Update Notification" 
