--- a/Controls/QueryManagementControl.xaml
+++ b/Controls/QueryManagementControl.xaml
@@ -264,6 +264,7 @@
                                             <x:Array Type="sys:String" xmlns:sys="clr-namespace:System;assembly=mscorlib">
                                                 <sys:String>쿼리 실행</sys:String>
                                                 <sys:String>정보 조회</sys:String>
+                                                <sys:String>비즈 조회</sys:String>
                                             </x:Array>
                                         </Setter.Value>
                                     </Setter>
@@ -276,12 +277,23 @@
                                             <x:Array Type="sys:String" xmlns:sys="clr-namespace:System;assembly=mscorlib">
                                                 <sys:String>쿼리 실행</sys:String>
                                                 <sys:String>정보 조회</sys:String>
+                                                <sys:String>비즈 조회</sys:String>
                                             </x:Array>
                                         </Setter.Value>
                                     </Setter>
                                 </Style>
                             </DataGridComboBoxColumn.EditingElementStyle>
                         </DataGridComboBoxColumn>
+                        
+                        <DataGridTextColumn Header="비즈명" Binding="{Binding BizName, UpdateSourceTrigger=PropertyChanged}" Width="150"/>
+                        <DataGridTextColumn Header="설명" Binding="{Binding Description2, UpdateSourceTrigger=PropertyChanged}" Width="200"/>
+                        <DataGridTextColumn Header="순번" Binding="{Binding OrderNumber, UpdateSourceTrigger=PropertyChanged}" Width="60">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="HorizontalAlignment" Value="Center"/>
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
                         
                         <DataGridTextColumn Header="TNS" Binding="{Binding TnsName, UpdateSourceTrigger=PropertyChanged}" Width="120"/>
                         <DataGridTextColumn Header="Host" Binding="{Binding Host, UpdateSourceTrigger=PropertyChanged}" Width="120" Visibility="Collapsed"/>
