--- a/Controls/GmesInfoControl.xaml
+++ b/Controls/GmesInfoControl.xaml
@@ -262,6 +262,18 @@
                              Height="28"
                              VerticalAlignment="Center"
                              VerticalContentAlignment="Center"
+                             Margin="0,0,15,5"/>
+
+                    <TextBlock Text="Model.Suffix:" 
+                               VerticalAlignment="Center" 
+                               FontWeight="SemiBold"
+                               Width="90"
+                               Margin="0,0,5,5"/>
+                    <TextBox x:Name="ModelSuffixTextBox" 
+                             Width="300" 
+                             Height="28"
+                             VerticalAlignment="Center"
+                             VerticalContentAlignment="Center"
                              Margin="0,0,0,5"/>
                 </WrapPanel>
             </Grid>
