--- a/Controls/QueryTextEditWindow.xaml
+++ b/Controls/QueryTextEditWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="FACTOVA_QueryHelper.Controls.QueryTextEditWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit"
         Title="SQL Query Edit" Height="500" Width="700"
         WindowStartupLocation="CenterOwner"
         ShowInTaskbar="False">
@@ -13,15 +14,17 @@
 
         <TextBlock Grid.Row="0" Text="SQL Query:" FontWeight="Bold" Margin="0,0,0,10"/>
 
-        <TextBox x:Name="QueryTextBox" 
-                 Grid.Row="1"
-                 TextWrapping="Wrap" 
-                 AcceptsReturn="True"
-                 VerticalScrollBarVisibility="Auto"
-                 HorizontalScrollBarVisibility="Auto"
-                 FontFamily="Consolas"
-                 FontSize="12"
-                 Margin="0,0,0,15"/>
+        <avalonedit:TextEditor x:Name="QueryTextEditor"
+                               Grid.Row="1"
+                               FontFamily="Consolas"
+                               FontSize="12"
+                               ShowLineNumbers="True"
+                               VerticalScrollBarVisibility="Auto"
+                               HorizontalScrollBarVisibility="Auto"
+                               Margin="0,0,0,15"
+                               Background="White"
+                               BorderBrush="#FFE0E0E0"
+                               BorderThickness="1"/>
 
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button x:Name="SaveButton" Content="Save" 
